--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8085
 server.servlet.context-path=/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_webquanao
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_webbanhang
 spring.datasource.username=root
 spring.datasource.password=
 
