--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,8 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
 
+paypal.mode=sandbox
+paypal.client.id=AfWQ-dbK20pBvQAsU0IBzUnx3BJ__qZJCqNHAfNX13-ZMJ0rYQ9LwNt3A76O1TiKxUhDIIoWHxk_j4_K
+paypal.client.secret=ECXl37jKU1iEE9wqnhbT9cfnsGQA09KP9MkNPy0lndb3GX4ZKowLyULW_8poq_BMK3EVR5IwOiLG7e4R
+
 
